--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li>Guardia</li>
                 <li>Especialidades</li>
                 <li>Contacto</li>
-                <li>Noticias</li>
+                <li><a href="./login/login.html">Ingresar</a></li>
                 <li>Servicios</li>
                 <li>Consultas</li>
             </ul>
